fix: add wrap to content-section

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -16,7 +16,7 @@
 		}
 		
 		.tab-content {
-			@apply p-4;
+			@apply p-4 flex flex-wrap;
 		}
 	}
 	
